2004-02-17  Nobuo Yamashita  <nobsun@sampou.org>

	* src/kahua/elem.scm: added node-set: and node-list-to-node-set.
	All tag functions flatten their args by checking node-set tag.

	* src/kahua/server.scm (kahua-render-proc) : A little modified
	for handling top level node-set.
	
2004-02-17  Yusei Tahara  <tahara@timedia.co.jp>

	* src/kahua/config.scm (kahua-init): bug fix. do sanity-check after
	loading user custom.conf.
	* cgi/kahua.cgi.in (load-user-config): change specification.
	when PATH_INFO has ~user component, load the custom.conf and
	connect user's spvr. don't tie to unix account.

2004-02-16  Yusei Tahara  <tahara@timedia.co.jp>

	* src/custom.conf.sample: added configuration file for user mode.
	* src/kahua/config.scm
	(<kahua-custom>): added. and added new internal slot, "user-mode" for
	running user mode. when running under user mode, "user-mode" value
	is a user name.
	(<kahua-config>): change inheritance. now <kahua-config> inherit
	two classes, <kahua-custom> and <singleton-mixin>.
	(kahua-init): change arguments. now "cfile" must need.
	"user" and "skip-check?" are optional keyword arguments.
	when apply "user" argument, load the user's "custom.conf"
	after "kahua.conf".
	* src/kahua-server.in (kahua-server-main):added optional argument
	"-user" for running user mode.
	* src/kahua-spvr.in
	(worker-script): when running under user mode, run kahua-server process
	with "-user" argument.
	(main): added optinal argument "-user" for running user mode.
	* src/kahua-shell.in (main): added optional argument "-user"
	for running user mode.
	* src/kahua-admin.in (spvr-command-processor): added help command list.
	adduser, deluser, lsuser.
	(main): added optional argument "-user" for running user mode.

2004-02-15  Yusei Tahara  <tahara@timedia.co.jp>

	* emacs/kahua.el.in: added the custom group 'kahua' and variables.
	* emacs/kahua-shell.el.in: use custom variables for ssh username
	and hostname. added select worker prompt hook.
